--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -18,16 +18,28 @@ jobs:
     runs-on: ubuntu-latest     # OS 지정
     steps:
       - uses: actions/checkout@v4
+
+      # Gradle 캐싱 설정
+      - name: Gradle Caching
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: ☕️ set up JDK 17        # 프로젝트의 java 버전에 맞추어 설정
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           server-id: github
-          setting-path: ${{ github.workspace }}
+          settings-path: ${{ github.workspace }}
 
-      - name: 👏🏻 grant execute permission for gradlew
+      - name: "👏🏻 grant execute permission for gradlew"
         run: chmod +x gradlew
 
-      - name: 🐘 build with Gradle (without test)
-			  run: ./gradlew clean build -x test --stacktrace
+      - name: "🐘 build with Gradle (without test)"
+        run: ./gradlew clean build -x test --stacktrace
