--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,7 @@ services:
       PROD_DATASOURCE_URL: "${PROD_DATASOURCE_URL}"
       PROD_DATASOURCE_USERNAME: "${PROD_DATASOURCE_USERNAME}"
       PROD_DATASOURCE_PASSWORD: "${PROD_DATASOURCE_PASSWORD}"
+      LOCAL_DATASOURCE_URL : "${LOCAL_DATASOURCE_URL}"
+      LOCAL_DATASOURCE_USERNAME: "${LOCAL_DATASOURCE_USERNAME}"
+      LOCAL_DATASOURCE_PASSWORD: "${LOCAL_DATASOURCE_PASSWORD}"
     restart: always
