[Chore] cd-workflow 파일에 환경변수 정보 추가

--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -51,12 +51,19 @@ jobs:
             echo "✋🏻Stopping existing container"
             sudo docker stop ${{ secrets.CONTAINER_NAME }} || true
             sudo docker rm ${{ secrets.CONTAINER_NAME }} || true
-            
+
             echo "🥳 Pulling new image"
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
-            
+
             echo "🌱 Running new container"
-            sudo docker run -d -p 8000:8080 --name ${{ secrets.CONTAINER_NAME }} ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
+            sudo docker run -d \
+              -p 8080:8080 \
+              --name ${{ secrets.CONTAINER_NAME }} \
+              -e SPRING_PROFILES_ACTIVE=prod \
+              -e PROD_DATASOURCE_URL=${{ secrets.PROD_DATASOURCE_URL }} \
+              -e PROD_DATASOURCE_USERNAME=${{ secrets.PROD_DATASOURCE_USERNAME }} \
+              -e PROD_DATASOURCE_PASSWORD=${{ secrets.PROD_DATASOURCE_PASSWORD }} \
+              ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
 
             echo "🚮 Cleaning up old images"
             sudo docker image prune -f
